[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/NPCs/Fantasy RPG NPCs - Individuel Frames/Magic Shopkeeper/MagicShopKeeper_Idle + Walk_3.png" type="Texture" id=1]
[ext_resource path="res://Assets/NPCs/Fantasy RPG NPCs - Individuel Frames/Magic Shopkeeper/MagicShopKeeper_Idle + Walk_2.png" type="Texture" id=2]
[ext_resource path="res://Assets/NPCs/Fantasy RPG NPCs - Individuel Frames/Magic Shopkeeper/MagicShopKeeper_Idle + Walk_4.png" type="Texture" id=3]
[ext_resource path="res://Assets/NPCs/Fantasy RPG NPCs - Individuel Frames/Magic Shopkeeper/MagicShopKeeper_Idle + Walk_1.png" type="Texture" id=4]
[ext_resource path="res://NPCs/Base/NPC.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Overlap/PlayerDetectionZone.gd" type="Script" id=6]
[ext_resource path="res://Videos & Audio/Audio/a_mao_da_punheta_e_a_mesma_da_poesia_8254143305026746686.ogg" type="AudioStream" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 6.0
height = 8.0

[sub_resource type="CircleShape2D" id=3]
radius = 52.0

[node name="VElhoPedofilo" type="KinematicBody2D"]
position = Vector2( 503, 279 )
collision_layer = 0
collision_mask = 0
script = ExtResource( 5 )
eventNPC = true
speed = 0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Run"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7 )
shape = SubResource( 2 )

[node name="ChangeDirectionTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="PlayerDetectionZone" type="Area2D" parent="."]
position = Vector2( 0, 7 )
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionZone"]
shape = SubResource( 3 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
[connection signal="timeout" from="ChangeDirectionTimer" to="." method="_on_ChangeDirectionTimer_timeout"]
[connection signal="body_entered" from="PlayerDetectionZone" to="PlayerDetectionZone" method="_on_PlayerDetectionZone2_body_entered"]
[connection signal="body_exited" from="PlayerDetectionZone" to="PlayerDetectionZone" method="_on_PlayerDetectionZone2_body_exited"]
